--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -90,12 +91,18 @@ section {
 .text p {
   margin-bottom: 1rem;
   margin-top: 1rem;
-  width: 65ch;
+  width: 45ch;
   
 }
 
+.conteudo_1 {
+  display: flex;
+  width: calc(100%-100px);
+  margin: 3rem auto;
+}
+
 .conteudo_1 .imagem {
-  height: 37rem;
+  height: 24rem;
   border-radius: 25px;
 
 }
@@ -165,7 +172,67 @@ footer {
   background-color: orange;
 }
 
-
-@media screen (max-width:320px) {
+@media screen and (max-width:720px) {
   
+  .header {
+    background-color: orange;
+    box-shadow: 1px 1px 4px black;
+    height: 18rem;
+    padding: 0 10%;
+  }
+
+  .header,
+  .navigation_header {
+  flex-direction: column;
+  gap: 0;
+  justify-content: space-around;
+  }
+
+  .navigation_header a {
+    display: flex;
+    padding: 10px;
+    
+  }  
+
+  .conteudo_1 {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .conteudo_1 .imagem {
+    width: 100%;
+  }
+
+  .text {
+    align-items: center;
+    width: 100%;
+    padding: 2rem 1rem;
+    text-align: center;
+  }
+
+  .text p {
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    text-align: center;
+    padding: 0 1rem;
+    
+  }
+
+  .pets_grid div {
+    width: 78%;
+  
+  }
+
+  .pets_grid {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .pets_grid img {
+    height: 250px;
+    
+  }
+
 }
