--- a/style.css
+++ b/style.css
@@ -167,9 +167,20 @@ section {
 }
 
 footer {
+  display: flex;
+  justify-content: space-between;
   width: auto;
-  height: 12rem;
+  height: 5rem;
   background-color: orange;
+}
+
+footer p {
+  font-size: 1.1rem;
+  font-family: sans-serif;
+  margin: 2rem 2rem;
+  text-align: center;
+  color: rgb(5, 126, 95);
+  font-weight: 400;
 }
 
 @media screen and (max-width:720px) {
@@ -235,4 +246,27 @@ footer {
     
   }
 
+}
+
+@media screen and (max-width:1026px) {
+  
+  .text {
+    align-items: center;
+    width: 100%;
+    padding: 2rem 1rem;
+    text-align: center;
+  }
+
+  .text p {
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    text-align: center;
+    padding: 0 1rem;
+    
+  }
+
+  .conteudo_1 {
+    display: flex;
+    flex-direction: column-reverse;
+  }
 }
